--- a/index.html
+++ b/index.html
@@ -10,6 +10,50 @@
 
 <body>
     <h1>Wikimedia Prospective Donor Form</h1>
+    <div class="donor-form">
+        <form method="POST" action="formaction.php" class="donor-info">
+            <label for="firstName">First Name: </label>
+            <input type="text" id="firstName" name="firstName" placeholder="First Name" class="form-control"
+                required><br>
+            <label for="lastName">Last Name: </label>
+            <input type="text" id="lastName" name="lastName" placeholder="Last Name" class="form-control" required><br>
+            <label for="streetAddress">Street Address: </label>
+            <input type="text" id="streetAddress" name="streetAddress" placeholder="123 Main St" class="form-control"
+                required><br>
+            <label for="city">City: </label>
+            <input type="text" id="city" name="city" placeholder="City" class="form-control" required><br>
+            <label for="state">State: </label>
+            <input type="text" id="state" name="state" placeholder="State" class="form-control" required><br>
+            <label for="postalCode">Postal Code: </label>
+            <input type="text" id="postalCode" name="postalCode" placeholder="Postal Code" class="form-control"
+                required><br>
+            <label for="phoneNumber">Phone Number: </label>
+            <input type="text" id="phoneNumber" name="phoneNumber" placeholder="Phone Number" class="form-control"
+                required><br>
+            <label for="email">Email: </label>
+            <input type="email" id="email" name="email" placeholder="Email Address" class="form-control" required><br>
+            <label for="contactPref">Perferred Form of Contact: </label>
+            <select name="contactPref" id="contactPref">
+                <option value="phone">Phone</option>
+                <option value="email">Email</option>
+            </select><br>
+            <label for="paymentPref">Perferred Form of Payment: </label>
+            <select name="paymentPref" id="paymentPref">
+                <option value="USD">USD</option>
+                <option value="euro">Euro</option>
+                <option value="btc">BTC</option>
+            </select><br>
+            <label for="donationFreq">Frequency of Donation: </label>
+            <select name="donationFreq" id="donationFreq">
+                <option value="monthly">Monthly</option>
+                <option value="yearly">Yearly</option>
+                <option value="one-time">One-time</option>
+            </select><br>
+            <label for="comments">Comments</label>
+            <textarea name="comments" id="comments"></textarea><br>
+            <input type="button" value="submit" name="Submit" class="btn">
+        </form>
+    </div>
 </body>
 
 </html>
