--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </select><br>
             <label for="comments">Comments</label>
             <textarea name="comments" id="comments"></textarea><br>
-            <input type="button" value="submit" name="Submit" class="btn">
+            <input type="submit" value="submit" name="Submit" class="btn">
         </form>
     </div>
 </body>
