added country selection, changed state to state/region

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
                 required><br>
             <label for="city">City: </label>
             <input type="text" id="city" name="city" placeholder="City" class="form-control" required><br>
-            <label for="state">State: </label>
-            <input type="text" id="state" name="state" placeholder="State" class="form-control" required><br>
+            <label for="state">State/Region: </label>
+            <input type="text" id="stateRegion" name="stateRegion" placeholder="State/Region" class="form-control"
+                required><br>
+            <label for="country">Country</label>
+            <select name="country" id="country">
+
+            </select><br>
             <label for="postalCode">Postal Code: </label>
             <input type="text" id="postalCode" name="postalCode" placeholder="Postal Code" class="form-control"
                 required><br>
